Fixed click issues and alignment

--- a/less/layout.less
+++ b/less/layout.less
@@ -4,8 +4,8 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  position: relative;
-  display: inline-block;
+  position: absolute;
+  display: block;
 
   .pickr-clearfix() {
     content: ".";
